# software-engineering-2025-session-2

./: README.md
3122002625/plagiarism/: CMakeLists.txt
3122002625/plagiarism/include/: Similarity.h
3122002625/plagiarism/src/: Similarity.cpp  main.cpp
3122002625/plagiarism_vs/Similarity/: Similarity.cpp  Similarity.vcxproj  Similarity.vcxproj.filters
3122002625/plagiarism_vs/Similarity/includes/: Similarity.h
3122002625/plagiarism_vs/plagiarism_system/: plagiarism_system.sln  plagiarism_system.vcxproj
3122002625/plagiarism_vs/plagiarism_system/includes/: Similarity.h
3122002625/plagiarism_vs/plagiarism_system/src/: main.cpp
3122002625/plagiarism_vs/plagiarism_system_benchmark/: main.cpp  plagiarism_system_benchmark.vcxproj
3122002625/plagiarism_vs/plagiarism_system_test/: plagiarism_system_test.cpp  plagiarism_system_test.vcxproj  plagiarism_system_test.vcxproj.filters
